--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -75,13 +75,16 @@
     }
 </style>
 
-
+<h:form>
 <p:timeline id="timeline" value="#{customTimelineView.model}"
             editable="true" eventMargin="10" eventMarginAxis="0"
             start="#{customTimelineView.start}"
             end="#{customTimelineView.end}"
             showNavigation="true" showButtonNew="true"
-            axisOnTop="true" stackEvents="false"/>
+            axisOnTop="true" stackEvents="false">
+	<p:ajax event="changed" listener="#{customTimelineView.onEdit}" />
+</p:timeline>
+</h:form>
 
     </h:body>
 </html>
