--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -54,25 +54,12 @@
         text-shadow: none;
     }
 
-    div.unavailable {
-        background: #F03030 none !important;  /* red */
-        border-color: #bd2828 !important;     /* red */
-    }
-
-    div.available {
-        background: #1AA11A none !important;  /* green */
-        border-color: #136e13 !important;     /* green */
-    }
-
-    div.maybe {
-        background: #FFA500 none !important;  /* orange */
-        border-color: #cc8100 !important;     /* orange */
-    }
-
     div.timeline-event-selected {
         background: #BECEFE none !important;
         border-color: #97B0F8 !important;
     }
+
+    #{customTimelineView.css}
 </style>
 
 <h:form>
